--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Prueba</title>
 </head>
-<body style="background-color: $color">
+<body>
 $Body
 </body>
 </html>
